edition = "2023";

package ginbot.reminder;

option go_package = "github.com/CrescentKohana/GinBot/pkg/gen/proto";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";

import "proto/common.proto";

enum ReminderStatus {
  PENDING = 0;
  SENT = 1;
  DELIVERED = 2;
  FAILED = 3;
}

service ReminderService {
  rpc GetReminder(GetReminderReq) returns (GetReminderResp);
  rpc ListReminders(ListRemindersReq) returns (ListRemindersResp);
  rpc CreateReminder(CreateReminderReq) returns (CreateReminderResp);
  rpc UpdateReminder(UpdateReminderReq) returns (google.protobuf.Empty);
  rpc DeleteReminder(DeleteReminderReq) returns (google.protobuf.Empty);
  rpc GetExpiredReminders(google.protobuf.Empty) returns (GetExpiredRemindersResp);
}

// Message representing a Reminder
message Reminder {
  // Reminder UUIDv7
  string id = 1;
  // Date and time of the Reminder (UTC+0)
  google.protobuf.Timestamp datetime = 2;
  // Timezone of the Reminder
  string timezone = 3;
  // Repeat in cron format
  string repeat_cron = 4;
  // Destinations to send the reminder to
  ReminderDestination destination = 5;
  // Status of the Reminder
  ReminderStatus status = 6;
  // User ID of the creator
  int64 user_id = 7;
  // Reminder message
  string message = 8;
  // Parent reminder ID
  int64 parent_id = 9;
  // Created at
  google.protobuf.Timestamp created_at = 10;
  // Updated at
  google.protobuf.Timestamp updated_at = 11;
}

// Destination to send the reminder to
message ReminderDestination {
  // Platform to send the reminder to
  common.PlatformEnum platform_enum = 1;
  // Platform meta information such as Server ID etc.
  google.protobuf.Struct platform_meta = 2;
  // Meta information such as Channel ID etc.
  google.protobuf.Struct destination_meta = 3;
}

message GetReminderReq {
  // Reminder UUIDv7
  string id = 1;
}

message GetReminderResp {
  Reminder reminder = 1;
}

message ListRemindersReq {
  // Limit the number of reminders returned
  int64 limit = 1;
  // Offset the reminders returned
  int64 offset = 2;
  // Search field for reminders
  string message = 3;
  // User ID of the creator
  int64 user_id = 4;
  // Search for reminders starting from this date
  google.protobuf.Timestamp period_start = 5;
  // Search for reminders ending at this date
  google.protobuf.Timestamp period_end = 6;
  // Search for reminders with this status
  ReminderStatus status = 7;
}

message ListRemindersResp {
  repeated Reminder reminders = 1;
}

message CreateReminderReq {
  // Date and time of the Reminder (UTC+0)
  google.protobuf.Timestamp datetime = 2;
  // Timezone of the Reminder
  string timezone = 3;
  // Reminder message
  string message = 4;
  // User ID of the creator
  int64 user_id = 5;
  // Destinations to send the reminder to
  ReminderDestination destination = 6;
  // Repeat in cron format
  string repeat_cron = 7;
  // Parent reminder ID
  int64 parent_id = 8;
}

message CreateReminderResp {
  // Reminder UUIDv7
  string id = 1;
}

message UpdateReminderReq {
  // Reminder UUIDv7
  string id = 1;
  // Date and time of the Reminder (UTC+0)
  google.protobuf.Timestamp datetime = 2;
  // Timezone of the Reminder
  string timezone = 3;
  // Reminder message
  string message = 4;
  // User ID of the creator
  int64 user_id = 5;
  // Destinations to send the reminder to
  ReminderDestination destination = 6;
  // Repeat in cron format
  string repeat_cron = 7;
  // Parent reminder ID
  int64 parent_id = 8;
}

message DeleteReminderReq {
  string id = 1;
}

message GetExpiredRemindersResp {
  repeated Reminder reminders = 1;
}