edition = "2023";

package ginbot.user_account;

option go_package = "github.com/CrescentKohana/GinBot/pkg/gen/proto";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";

import "proto/common.proto";

enum UserClearance {
  UNKNOWN = 0;
  REGISTERED = 1;
  MEMBER = 10;
  MODERATOR = 20;
  ADMINISTRATOR = 50;
  OWNER = 100;
}

service UserService {
  rpc GetUser(GetUserReq) returns (GetUserResp);
  rpc Register(RegisterReq) returns (RegisterResp);
  rpc GetCongratulableBirthdays(google.protobuf.Empty) returns (GetCongratulableBirthdaysResp);
}

// Message representing a User
message UserAccount {
  // UUID of the User
  string id = 1;
  // Username of the User
  string username = 2;
  // Clearance level of the User
  UserClearance clearance = 3;
  // Avatar URL of the User
  string avatar = 4;
  // Locale of the User
  string locale = 5;
  // Timezone of the User
  string timezone = 6;
  // User ID of the creator
  google.protobuf.Timestamp birthday = 7;
  // Birthday last congratulated at
  google.protobuf.Timestamp last_congratulated_at = 8;
  // Created at
  google.protobuf.Timestamp created_at = 9;
  // Updated at
  google.protobuf.Timestamp updated_at = 10;
}

message GetUserReq {
  // UUID of the User
  string id = 1;
}

message GetUserResp {
  UserAccount user = 1;
}

message RegisterReq {
  // Platform where the user is registering
  common.PlatformEnum platform = 1;
  // User ID of the user registering (platform agnostic)
  string platform_user_id = 2;
  // Metadata of the platform (such as other identifiers)
  google.protobuf.Struct platform_metadata = 3;
  // Username of the user
  string username = 4;
  // Locale of the user
  string locale = 5;
}

message RegisterResp {
  // User UUID of the registered user
  string user_id = 1;
}

message GetCongratulableBirthdaysResp {
  repeated UserAccount users = 1;
}
